# file-server

./: Cargo.toml  README.md  config.json
docs/: API.md  CONFIG.md  FEATURES.md  IMPLEMENTATION.md  QUICK_START.md  USAGE.md
src/: errors.rs  handlers.rs  main.rs  models.rs  utils.rs
static/: app.js  index.html  style.css
