[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = { version = "0.8.7", features = ["multipart"] }
tracing = "0.1"
tracing-subscriber = "0.3.22"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
tower = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"
multer = "3.0"
anyhow = "1.0"
thiserror = "1.0"
mime = "0.3"